# StackLib

./: CMakeLists.txt  README.md  StackConfig.cmake
include/stack/: EnumTypes.h  stack.h
src/: CMakeLists.txt  stack.c
tests/: CMakeLists.txt  test01.c
